fixing visual inconsitancy in the detailed dropdown-long text is wrapping earlier then expected

--- a/src/components/FlightList/FlightList.module.scss
+++ b/src/components/FlightList/FlightList.module.scss
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   margin-top: 3.5rem;
-  width: 80%;
 
   background: rgba(72, 72, 72, 0.2);
   border-radius: 16px;
